se definen los tiempos de backoff y circuitbreaker por configuracion

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,5 +2,16 @@ app{
   dron{
     maximoNumeroEntregas = 3
   }
+  service{
+    maxFailures = 1,
+    callTimeout = 1,
+    resetTimeout = 1
+  }
+
+  backoff{
+    minBackoff = 1
+    maxBackoff = 3
+    randomFactor = 0.2
+  }
 
 }
